Fix spacing issues and remove 'register' link in particpate message for registration disabled pods.

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -344,6 +344,10 @@ div .p-summary:not(.image-gallery)>.caption-wrap .caption {
   margin-bottom: 1.5rem;
 }
 
+.container article.container-fluid:last-child {
+  margin: 0 0 -2.75rem 0;
+}
+
 audio,
 video {
   max-width: 100%;
@@ -573,6 +577,10 @@ article .p-summary blockquote {
 .h-feed>div .h-entry {
   margin: 1rem 0;
   padding: 0.75rem 0.75rem 0.5rem 0.75rem;
+}
+
+.h-feed article:first-child {
+  margin-top: 0;
 }
 
 .h-feed .p-summary a em,
@@ -869,9 +877,17 @@ pre {
     margin: -0.5rem 1rem -1rem 1rem;
   }
 
+  .h-feed article:first-child {
+    margin-top: 1rem;
+  }
+
   div .h-feed:last-child,
   div .h-entry:last-child {
     margin-bottom: 2.5rem;
+  }
+
+  .container article.container-fluid:last-child {
+    margin: -1.5rem 0 -0.35rem 0;
   }
 
   .caption {
@@ -965,6 +981,10 @@ pre {
     margin-bottom: -0.25rem;
   }
 
+  .container article.container-fluid:last-child {
+    margin: 0 0 -1rem 0;
+  }
+
   #convJoinSummary {
     margin: 0 0 -1rem 0;
   }
@@ -993,6 +1013,10 @@ pre {
     margin: -1rem 1rem -1.5rem 1rem;
   }
 
+  .container article.container-fluid:last-child {
+    margin: 0 0 -1.4rem 0;
+  }
+
   #convJoinSummary {
     margin: 0.25rem 0 -0.25rem 0;
   }
@@ -1016,6 +1040,10 @@ pre {
 
   nav.pagination-nav:nth-of-type(2) {
     margin: -1rem 1rem -2rem 1rem;
+  }
+
+  .container article.container-fluid:last-child {
+    margin: 0 0 -2.4rem 0;
   }
 
   #convJoinSummary {
